# challenge-favorite-products

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 08d7d5bf9cf7_create_favorite_products_table.py  224b4365e9ec_create_customers_table.py
app/core/configs/: settings.py
app/core/dependencies/: auth.py  customer.py  customer_favorite_product.py  favorite_product.py  settings.py
app/domain/interfaces/: customer.py  favorite_product.py  product_api.py
app/domain/models/: customer.py  favorite_product.py
app/domain/schemas/: auth.py  customer.py  customer_favorite_products.py  favorite_product.py  pagination.py
app/domain/services/: auth.py  customer.py  customer_favorite_product.py  favorite_product.py
app/infrastructure/cache/: redis.py
app/infrastructure/database/: postgres.py
app/infrastructure/database/models/: __init__.py
app/infrastructure/queue/: rq_client.py
app/infrastructure/repositories/: customer.py  favorite_product.py
app/infrastructure/tasks/: favorite_product_task.py
app/presentation/api/: main.py
app/presentation/api/dependencies/: auth.py
app/presentation/api/middlewares/: exception_handler.py
app/presentation/api/routes/: auth.py  customer.py  customer_favorite_product.py  favorite_product.py  health.py
app/presentation/fake_api_products/: database.py  main.py  models.py  routes.py
app/presentation/worker/: worker.py
infra/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
tests/: conftest.py  test_health.py
tests/domain/services/: fake_auth.py
tests/infrastructure/: fake_db.py  fake_redis.py
tests/presentation/api/routes/: test_auth.py  test_customer.py
