[project]
name = "challenge-favorite-products"
version = "0.1.0"
description = "Api para cadastro de clientes e seus produtos favoritos"
authors = [
    {name = "João Hang",email = "j.vitorhang@gmail.com"}
]
packages = [{include = "challenge-favorite-products"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.11.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "tests.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--verbose --strict-config --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
